--- a/app/templates/player.html
+++ b/app/templates/player.html
@@ -48,6 +48,15 @@
                 <h2 class="text-2xl">{{ video_data["alias"] }}</h2>
                 <p class="text-gray-400">/videos/{{ video_data["filename"] }}</p>
             </div>
+            <!-- Thumbnail container -->
+            <div id="thumbnailContainer" class="flex flex-wrap gap-4 mt-4">
+                {% for capture in video_data["captures"] %}
+                <div class="thumbnail-wrapper">
+{#                    <img src="{{ url_for('thumbnail', filename=capture["thumbnail"]) }}" alt="Thumbnail" class="thumbnail">#}
+                    <span class="timestamp" onclick="seekToTimestamp({{ capture["timestamp"] }})">{{ capture["timestamp"] }}</span>
+                </div>
+                {% endfor %}
+            </div>
         </div>
         <div id="codeCapture" class="w-1/3 grow-0">
             <div id="captureParentContainer" class="bg-white border border-gray-200 shadow-sm rounded-xl p-4 pt-2">
