--- a/app/templates/new-base.html
+++ b/app/templates/new-base.html
@@ -21,7 +21,7 @@
 <body class="bg-gradient-to-br from-gray-50 via-gray-50 to-purple-200">
 
 <div class="flex">
-    <nav class="flex h-screen flex-col sticky left-0 top-0 w-fit min-w-fit justify-between border-e bg-white">
+    <nav class="flex h-screen flex-col sticky left-0 top-0 w-fit min-w-fit justify-between border-e bg-white w-1/6">
         <a href="#mainContent" class="sr-only">Skip to Main Content</a>
         <div class="p-4">
             <div class="flex items-center w-fit mx-auto">
@@ -81,7 +81,7 @@
             <p class="text-xs text-center">Developed by<br><span class="font-bold">Team Mental Capacity</span></p>
         </div>
     </nav>
-    <div class="flex-grow flex flex-col">
+    <div class="flex-grow flex flex-col w-5/6">
         <main id="mainContent" class="flex-grow">
             {% block content %}{% endblock %}
         </main>
